<resources>
    <string name="app_name">NarutoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_jutsus">Best jutsus:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="age">Age:</string>
    <string name="clan">Clan:</string>
    <string name="logo">logo</string>
    <string name="user_image">user image</string>
    <string name="image_for_shadow_effect">image for shadow effect</string>
    <string name="naruto">Naruto</string>
</resources>